# data-corpora-kanseki-SK

./: .gitignore  .gitmodules  README.md  build_gitmodules.py  clean_text.py  git_clone_Kanseki_Repository.sh  merge_and_split_text_files.sh  pyproject.toml
META/: Kanseki_Repository.catalog
